<resources>
    <string name="app_name">CXT</string>

    <!--Datos de ejemplo-->
    <string name="exampleEmail">nata@ct.mx</string>
    <string name="examplePassword">123456</string>
    <string name="exampleName">Zitacuaro</string>
    <string name="exampleLastName">Michi</string>
    <string name="examplePhone">4522013964</string>

    <!-- Genearal-->
    <string name="tvCorreo">Correo:</string>
    <string name="tvContrasena">Contraseña:</string>
    <string name="tvNombre">Nombre(s):</string>
    <string name="tvApellido">Apellido(s):</string>"
    <string name="tvTelefono">Teléfono:</string>
    <string name="btnCancelar">Cancelar</string>


    <!--Login-->
    <string name="loginTitle">¡Hola!</string>
    <string name="loginSubtitle">Ingresa a tu cuenta</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnCrearCuenta">Registrarse</string>

    <!--Registro-->
    <string name="registroTitle">Crea tu cuenta</string>
    <string name="registroSubtitle">Ingresa tus datos</string>
    <string name="btnRegistrar">Continuar</string>

    <!--RegisroNino-->
    <string name="tvRegistroNinoTitle">Datos tutorado</string>
    <string name="tvRegistroNinoSubtitle">A un paso de la diversión</string>
    <string name="btnRegistrarNino">Registrarse e ingresar</string>
    <string name="tvCondición">Condición:</string>
    <string name="tvEdad">Edad:</string>
    <string name="l1">Ninguna</string>
    <string name="l2">Mov. Limitada</string>
    <string name="l3">TDAH</string>
    <string name="l4">Autismo(Exsperimental)</string>
    <string name="tvActWeek">Niveles por semana:</string>


    <!--Home-->
    <string name="tvHomeTitle">Bienvenido</string>
    <string name="tvHomeSubtitle">¿Qué quieres hacer hoy?</string>
    <string name="tvUltimaSesión">Última sesión:</string>
    <string name="tvMotivationTitle">¡Recuerda!</string>
    <string name="tvMotivation">No siempre puedes ser el mejor. Pero puedes dar lo mejor de ti</string>
    <string name="tvMotivationAutor">Sebastian Vettel</string>

    <!--Consejo-->
    <string name="tvConsejosTitle">Consejos útiles</string>
    <string name="tvConsejosSubtitle">¿Necesitas ayuda?</string>"
    <string name="tvConsejoTitle1">Consejo 1</string>
    <string name="tvConsejoTitle2">Consejo 2</string>
    <string name="tvConsejoTitle3">Consejo 3</string>
    <string name="tvConsejoResumen">Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do
                                    eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="tvConsejo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
        euismod, nisi sed mollis tristique, lectus metus cursus turpis, non varius urna lectus non
        risus. Cras varius velit eu congue commodo. Sed felis quam, ultrices nec posuere at,
        vestibulum congue dui. Aliquam tincidunt augue quis condimentum pharetra. Sed condimentum a
        sem eget dapibus. Phasellus purus nisl, molestie vitae lectus molestie, faucibus lobortis
        nisl. Proin sit amet diam tristique, maximus purus sed, molestie sapien. Donec at sem dui.
        Cras pellentesque massa id pharetra tempus. Sed sed ornare nunc, et maximus sem.
                            Aenean mattis metus vel eros finibus rhoncus. Cras varius ipsum id nisl
        porttitor, non dignissim quam interdum. Etiam ut nulla ut urna dignissim accumsan ac quis diam.
        Sed fringilla nulla tortor, vel dictum sem tempus ut. Sed luctus tellus et iaculis elementum.
        Morbi sollicitudin lorem quis mi pellentesque bibendum. Sed ornare tortor nec lectus euismod tristique.
        Sed dapibus enim mi, sit amet malesuada urna placerat at. Nunc facilisis, dolor ullamcorper laoreet molestie,
        purus ipsum convallis enim, accumsan placerat lorem lacus et tellus. Cras sit amet est ullamcorper,
        dignissim erat vitae, convallis odio. Nunc quis eros et dolor varius facilisis. Maecenas quam odio,
        mollis in egestas in, facilisis sit amet odio. Mauris in suscipit metus. Nullam id massa
        erat. Donec a leo vel augue fermentum pharetra id eget mauris.</string>
    <!--Jugo-->
    <string name="tvJugoTitle">¡Juguemos!</string>"
    <string name="tvJugoSubtitle">!Mas diversion</string>
    <string name="tvJuegoTitle1">Juego 1</string>
    <string name="tvJuegoTitle2">Juego 2</string>
    <string name="tvJuegoTitle3">Juego 3</string>
    <string name="tvDescripcionJuego1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
        euismod, nisi sed mollis tristique, lectus metus cursus turpis, non varius urna lectus non
        risus. Cras varius velit eu congue commodo. Sed felis quam, ultrices nec posuere at,
        vestibulum congue dui. Aliquam tincidunt augue quis condimentum pharetra. Sed condimentum a
        sem eget dapibus. Phasellus purus nisl, molestie vitae lectus molestie, faucibus lobortis
        nisl. Proin sit amet diam tristique, maximus purus sed, molestie sapien. Donec at sem dui.
        Cras pellentesque massa id pharetra tempus. Sed sed ornare nunc, et maximus sem.
                            Aenean mattis metus vel eros finibus rhoncus. Cras varius ipsum id nisl
        porttitor, non dignissim quam interdum. Etiam ut nulla ut urna dignissim accumsan ac quis diam.
        Sed fringilla nulla tortor, vel dictum sem tempus ut. Sed luctus tellus et iaculis elementum.</string>
    <string name="tvDescripciinJuego2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
        euismod, nisi sed mollis tristique, lectus metus cursus turpis, non varius urna lectus non
        risus. Cras varius velit eu congue commodo. Sed felis quam, ultrices nec posuere at,
        vestibulum congue dui. Aliquam tincidunt augue quis condimentum pharetra. Sed condimentum a
        sem eget dapibus. Phasellus purus nisl, molestie vitae lectus molestie, faucibus lobortis
        nisl. Proin sit amet diam tristique, maximus purus sed, molestie sapien. Donec at sem dui.
        Cras pellentesque massa id pharetra tempus. Sed sed ornare nunc, et maximus sem.
                            Aenean mattis metus vel eros finibus rhoncus. Cras varius ipsum id nisl
        porttitor, non dignissim quam interdum. Etiam ut nulla ut urna dignissim accumsan ac quis diam.
        Sed fringilla nulla tortor, vel dictum sem tempus ut. Sed luctus tellus et iaculis elementum.
        Morbi sollicitudin lorem quis mi pellentesque bibendum. Sed ornare tortor nec lectus euismod tristique.
        Sed dapibus enim mi, sit amet malesuada urna placerat at. Nunc facilisis, dolor ullamcorper laoreet molestie,
        purus ipsum convallis enim, accumsan placerat lorem lacus et tellus. Cras sit amet est ullamcorper,
        dignissim erat vitae, convallis odio. Nunc quis eros et dolor varius facilisis. Maecenas quam odio,
        mollis in egestas in, facilisis sit amet odio. Mauris in suscipit metus.</string>


    <!--Ajustes-->
    <string name="tvAjustesTitle">Ajustes</string>
    <string name="tvAjustesSubtitle">Modifica tus datos</string>
    <string name="btnGuardarCambios">Guardar cambios</string>
    <string name="btnCerrarSesion">Cerrar sesión</string>
    <string name="tvDatosTutor">Datos tutor</string>
    <string name="tvDatosNino">Datos niño</string>
    <string name="toastGuardar">Cambios guardados</string>

    <!--Progreso-->
    <string name="tvProgresoTitle">Progreso</string>
    <string name="tvProgresoSubtitle">¿Cómo va tu progreso?</string>
    <string name="tvGameScore">Game Score: 000</string>
    <string name="tvNivel">35</string>"
    <string name="tvNivelTitle">Niveles Completados</string>"
    <string name="tvBestSesion">Mejor sesión</string>"


</resources>