<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente_animado"
    tools:context=".RegistroNino">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/iniHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/q1Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/midHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/q3Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/finHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".95"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/iniVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/midVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/finVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9" />

    <TextView
        android:id="@+id/tvTitleNino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bits_font"
        android:shadowColor="@color/sombras"
        android:shadowDx="5"
        android:shadowDy="3"
        android:shadowRadius="4"
        android:text="@string/tvRegistroNinoTitle"
        android:textColor="@color/txtPrincipal"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="@+id/iniVertical"
        app:layout_constraintTop_toTopOf="@+id/iniHorizontal" />

    <TextView
        android:id="@+id/tvSubtitleNino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/principal_font"
        android:shadowColor="@color/sombras"
        android:shadowDx="4"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/tvRegistroNinoSubtitle"
        android:textColor="@color/txtSecundario"
        android:textSize="25sp"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="1.0"

        app:layout_constraintBottom_toTopOf="@+id/q1Horizontal"
        app:layout_constraintStart_toStartOf="@+id/iniVertical"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleNino" />

    <ImageView
        android:id="@+id/imgLogoRegistroNino"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/midHorizontal"
        app:layout_constraintEnd_toStartOf="@+id/finVertical"

        app:layout_constraintStart_toStartOf="@+id/iniVertical"
        app:layout_constraintTop_toTopOf="@+id/q1Horizontal"

        app:srcCompat="@drawable/icon_nino" />

    <TextView
        android:id="@+id/tvNameRegistroNino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/principal_font"
        android:shadowColor="@color/sombras"
        android:shadowDx="4"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/tvNombre"
        android:textColor="@color/txtPrincipal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/iniVertical"
        app:layout_constraintTop_toTopOf="@+id/midHorizontal" />

    <EditText
        android:id="@+id/etNameRegistroNino"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/principal_font"
        android:inputType="text"
        android:text="@string/exampleName"
        android:textColor="@color/txtSecundario"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/finVertical"
        app:layout_constraintStart_toStartOf="@+id/iniVertical"
        app:layout_constraintTop_toBottomOf="@+id/tvNameRegistroNino" />

    <TextView
        android:id="@+id/tvApellidoRegistroNino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/principal_font"
        android:shadowColor="@color/sombras"
        android:shadowDx="4"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/tvApellido"
        android:textColor="@color/txtPrincipal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/iniVertical"
        app:layout_constraintTop_toBottomOf="@+id/etNameRegistroNino" />

    <EditText
        android:id="@+id/etApellidoRegistroNino"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/principal_font"
        android:inputType="text"
        android:text="@string/exampleLastName"
        android:textColor="@color/txtSecundario"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/finVertical"
        app:layout_constraintStart_toStartOf="@+id/iniVertical"
        app:layout_constraintTop_toBottomOf="@+id/tvApellidoRegistroNino" />

    <TextView
        android:id="@+id/tvEdadRegistroNino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/principal_font"
        android:shadowColor="@color/sombras"
        android:shadowDx="4"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/tvEdad"
        android:textColor="@color/txtPrincipal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/iniVertical"
        app:layout_constraintTop_toBottomOf="@+id/etApellidoRegistroNino" />

    <EditText
        android:id="@+id/etEdadRegistroNino"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/principal_font"
        android:inputType="number"
        android:text="00"
        android:textColor="@color/txtSecundario"
        android:textSize="15sp"

        app:layout_constraintEnd_toStartOf="@+id/midVertical"
        app:layout_constraintStart_toStartOf="@+id/iniVertical"
        app:layout_constraintTop_toBottomOf="@+id/tvEdadRegistroNino" />

    <TextView
        android:id="@+id/CondicionNino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/principal_font"
        android:textColor="@color/txtPrincipal"
        android:shadowColor="@color/sombras"
        android:shadowDx="4"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/tvCondición"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/iniVertical"
        app:layout_constraintTop_toBottomOf="@+id/etEdadRegistroNino" />

    <Spinner
        android:id="@+id/spnCondicionNino"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="4dp"
        android:spinnerMode="dropdown"
        android:backgroundTint="@color/sombras"
        style="@style/SpinnerTransparentStyle"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/iniVertical"
        app:layout_constraintTop_toBottomOf="@+id/CondicionNino" />

    <Button
        android:id="@+id/btnRegistrarNino"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btnPrincipal"
        android:fontFamily="@font/principal_font"
        android:shadowColor="@color/sombras"
        android:shadowDx="4"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/btnRegistrarNino"
        android:textColor="@color/txtPrincipal"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/finVertical"
        app:layout_constraintStart_toStartOf="@+id/iniVertical"
        app:layout_constraintTop_toTopOf="@+id/q3Horizontal" />

    <Button
        android:id="@+id/btnCancelarNino"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/btnSecundario"
        android:fontFamily="@font/principal_font"
        android:shadowColor="@color/sombras"
        android:shadowDx="4"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/btnCancelar"
        android:textColor="@color/txtPrincipal"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/finVertical"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="@+id/iniVertical"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrarNino" />
    <!--
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/principal_font"
        android:shadowColor="@color/sombras"
        android:shadowDx="4"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/tvActWeek"

        android:textColor="@color/txtPrincipal"
        android:textSize="20sp"

        app:layout_constraintStart_toStartOf="@+id/midVertical"
        app:layout_constraintTop_toBottomOf="@+id/etApellidoRegistroNino" />

    <EditText
        android:id="@+id/etActWeek"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/principal_font"
        android:inputType="number"
        android:text="10"
        android:textColor="@color/txtSecundario"
        android:textSize="15sp"

        app:layout_constraintEnd_toStartOf="@+id/finVertical"
        app:layout_constraintStart_toStartOf="@+id/midVertical"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

        -->

</androidx.constraintlayout.widget.ConstraintLayout>