<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente_animado"
    tools:context=".Registro">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/iniHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/q1Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/midHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/q3Horizontal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/q3Horizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.77" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/q3Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8016416" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/finHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:backgroundTint="@color/black"
        app:layout_constraintGuide_percent=".95"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/iniVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/midVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/finVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9" />

    <ImageView
        android:id="@+id/imgLogoRegistro"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/midHorizontal"
        app:layout_constraintEnd_toStartOf="@+id/finVertical"
        app:layout_constraintStart_toStartOf="@+id/iniVertical"
        app:layout_constraintTop_toTopOf="@+id/q1Horizontal"
        app:srcCompat="@drawable/persona_login" />

    <TextView
        android:id="@+id/tvTitleRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bits_font"
        android:text="@string/registroTitle"
        android:textColor="@color/txtPrincipal"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="@+id/iniVertical"
        app:layout_constraintTop_toTopOf="@+id/iniHorizontal" />

    <TextView
        android:id="@+id/tvSubtitleRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/principal_font"
        android:text="@string/registroSubtitle"
        android:textColor="@color/txtSecundario"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/q1Horizontal"
        app:layout_constraintEnd_toStartOf="@+id/midVertical"
        app:layout_constraintStart_toStartOf="@+id/iniVertical"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleRegistro" />

    <TextView
        android:id="@+id/tvNameRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/principal_font"
        android:text="@string/tvNombre"
        android:textColor="@color/txtPrincipal"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/iniVertical"
        app:layout_constraintTop_toTopOf="@+id/midHorizontal" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="300dp"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/exampleName"
        android:textColor="@color/txtSecundario"
        android:textSize="15sp"

        app:layout_constraintBottom_toTopOf="@+id/q3Horizontal3"
        app:layout_constraintEnd_toStartOf="@+id/finVertical"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/iniVertical"
        app:layout_constraintTop_toBottomOf="@+id/tvNameRegistro"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>